Bug 1182444 - Show audio as enabled when an audio track is present in stream. r=jesup, a=lmandel